# VidAiO

./: .flatpak-manifest.yaml  .gitignore  CMakeLists.txt  Main.qml  README.md  build-flatpak.sh  build-go.sh  clone-deps.sh  go.mod  go.sum  main.cpp  run.sh
app/: main.c
web/: web.go
web/templates/: base.html  episodes.html  search.html  servers.html
